Forgot Password on login page fixed

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -104,6 +104,8 @@
                                     {
                                         <li><a class="dropdown-item" asp-controller="Admin" asp-action="Users"><i
                                                     class="bi bi-people"></i> Manage Users</a></li>
+                                        <li><a class="dropdown-item" asp-controller="Admin" asp-action="PendingApprovals"><i
+                                                    class="bi bi-person-check"></i> Pending Approvals</a></li>
                                         <li><a class="dropdown-item" asp-controller="CustomerCare" asp-action="Index"><i
                                                     class="bi bi-person-badge"></i> Customer Care</a></li>
                                         <li><a class="dropdown-item" asp-controller="Finance" asp-action="Index"><i
