Forgot Password Fixed on login page

--- a/Views/Account/ResetPasswordOtp.cshtml
+++ b/Views/Account/ResetPasswordOtp.cshtml
@@ -11,10 +11,7 @@
     {
         <div class="alert alert-success">@ViewBag.Success</div>
     }
-    @if (!ViewData.ModelState.IsValid && ViewData.ModelState[""] != null && ViewData.ModelState[""].Errors.Count > 0)
-    {
-        <div class="alert alert-danger">@ViewData.ModelState[""]?.Errors[0].ErrorMessage</div>
-    }
+    @Html.ValidationSummary(false, "", new { @class = "alert alert-danger" })
     @if (ViewBag.Error != null)
     {
         <div class="alert alert-danger">@ViewBag.Error</div>
