--- a/Views/Shared/_Pagination.cshtml
+++ b/Views/Shared/_Pagination.cshtml
@@ -18,17 +18,17 @@
 <nav aria-label="Page navigation">
     <ul class="pagination justify-content-center mb-0">
         <!-- Previous Button -->
-        <li class="page-item @(pageModel.HasPreviousPage ? "" : "disabled")">
+        <li class="page-item @(pageModel?.HasPreviousPage == true ? "" : "disabled")">
             <a class="page-link" asp-action="@pageAction" asp-route-sortOrder="@sortOrder"
                 asp-route-searchString="@searchString"
-                asp-route-pendingPageNumber="@(isPendingPaginator? pageModel.PageIndex - 1 : pendingPage)"
-                asp-route-clearancePageNumber="@(!isPendingPaginator ? pageModel.PageIndex - 1 : clearancePage)">&laquo;</a>
+                asp-route-pendingPageNumber="@(isPendingPaginator ? (pageModel?.PageIndex ?? 1) - 1 : pendingPage)"
+                asp-route-clearancePageNumber="@(!isPendingPaginator ? (pageModel?.PageIndex ?? 1) - 1 : clearancePage)">&laquo;</a>
         </li>
 
         <!-- Page Number Links -->
-        @for (int i = 1; i <= pageModel.TotalPages; i++)
+        @for (int i = 1; i <= (pageModel?.TotalPages ?? 1); i++)
         {
-            <li class="page-item @(i == pageModel.PageIndex ? "active" : "")">
+            <li class="page-item @(i == (pageModel?.PageIndex ?? 1) ? "active" : "")">
                 <a class="page-link" asp-action="@pageAction" asp-route-sortOrder="@sortOrder"
                     asp-route-searchString="@searchString"
                     asp-route-pendingPageNumber="@(isPendingPaginator ? i : pendingPage)"
@@ -37,11 +37,11 @@
         }
 
         <!-- Next Button -->
-        <li class="page-item @(pageModel.HasNextPage ? "" : "disabled")">
+        <li class="page-item @(pageModel?.HasNextPage == true ? "" : "disabled")">
             <a class="page-link" asp-action="@pageAction" asp-route-sortOrder="@sortOrder"
                 asp-route-searchString="@searchString"
-                asp-route-pendingPageNumber="@(isPendingPaginator? pageModel.PageIndex + 1 : pendingPage)"
-                asp-route-clearancePageNumber="@(!isPendingPaginator ? pageModel.PageIndex + 1 : clearancePage)">&raquo;</a>
+                asp-route-pendingPageNumber="@(isPendingPaginator ? (pageModel?.PageIndex ?? 1) + 1 : pendingPage)"
+                asp-route-clearancePageNumber="@(!isPendingPaginator ? (pageModel?.PageIndex ?? 1) + 1 : clearancePage)">&raquo;</a>
         </li>
     </ul>
 </nav>
